# hfg-webcam-particles

./: .gitignore  .travis.yml  CMakeLists.txt
resource/: Info.plist  app.icns  install.icns  test.glslf  test.glslv
resource/debug/: particles.json
resource/sound/: LICENSE
source/: Application.cpp  Application.hpp  AsyncMostRecentDataStream.hpp  DebugImageProvider.cpp  DebugImageProvider.hpp  FaceBlitter.cpp  FaceBlitter.hpp  FinalComposite.cpp  FinalComposite.hpp  ImageProvider.cpp  ImageProvider.hpp  ImageProvider_debug.cpp  IntervalMath.hpp  OverlayCompose.cpp  OverlayCompose.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  ParticleTextureToBuffer.cpp  ParticleTextureToBuffer.hpp  ReactionTimelineRandomizer.cpp  ReactionTimelineRandomizer.hpp  RendererState.hpp  Resources.cpp  Resources.hpp  SampleLibrary.cpp  SampleLibrary.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  SoundPlaylist.cpp  SoundPlaylist.hpp  Template.hpp  ThreadSyncTripleBuffer.hpp  Timeline.cpp  Timeline.hpp  Webcam.cpp  Webcam.hpp  WebcamImageTransform.cpp  WebcamImageTransform.hpp  main.cpp  main.hpp
source/effects/: AccumulationEffect.cpp  AccumulationEffect.hpp  AllEffects.hpp  BackgroundDifferenceGlowEffect.cpp  BackgroundDifferenceGlowEffect.hpp  ConvergeCircle2Effect.cpp  ConvergeCircle2Effect.hpp  ConvergeCircleEffect.cpp  ConvergeCircleEffect.hpp  ConvergePoint2Effect.cpp  ConvergePoint2Effect.hpp  ConvergePointEffect.cpp  ConvergePointEffect.hpp  EaseInOutEffect.cpp  EaseInOutEffect.hpp  EffectRegistry.cpp  EffectRegistry.hpp  HueDisplace2Effect.cpp  HueDisplace2Effect.hpp  HueDisplaceEffect.cpp  HueDisplaceEffect.hpp  ParticleDisplaceEffect.cpp  ParticleDisplaceEffect.hpp  ParticleSizeByHueEffect.cpp  ParticleSizeByHueEffect.hpp  ParticleSizeModifyEffect.cpp  ParticleSizeModifyEffect.hpp  ParticleSpacingEffect.cpp  ParticleSpacingEffect.hpp  ReduceParticleCountEffect.cpp  ReduceParticleCountEffect.hpp  SmearEffect.cpp  SmearEffect.hpp  SmoothTrailsEffect.cpp  SmoothTrailsEffect.hpp  SparkleEffect.cpp  SparkleEffect.hpp  StandingWaveEffect.cpp  StandingWaveEffect.hpp  TrailsEffect.cpp  (+5 more)
source/graphics/: Framebuffer.cpp  Framebuffer.hpp  ParticleBuffer.cpp  ParticleBuffer.hpp  Pipeline.cpp  Pipeline.hpp  ScreenRectBuffer.cpp  ScreenRectBuffer.hpp  Texture.cpp  Texture.hpp  Util.cpp  Util.hpp  Window.cpp  Window.hpp
source/sound/: Renderer.cpp  Renderer.hpp  SampleBuffer.cpp  SampleBuffer.hpp
test/: TestIntervalMath.cpp  main.hpp
